# zypper

./: .clang-format  .cvsignore  .gitattributes  .gitignore  .travis.yml  CMakeLists.txt  COPYING  HACKING  Makefile.am  Makefile.cvs  NeedReboot  Readme.md  TODO  VERSION  VERSION.cmake  configure.ac  libzypp.changes  libzypp.pc.cmake  libzypp.pc.in  libzypp.spec  libzypp.spec.cmake  libzypp.spec.in  mkChangelog  needreboot  zypp-history.lr  zypp.conf  zypper.conf  zypper.spec.cmake  zypper.spec.in
devel/: .cvsignore  CMakeLists.txt  Example.EditionCompare.cc  Example.createCapabilities.cc  Example.createResolvable.cc  Makefile.am  genclass.in
devel/devel.aschnell/: parse1.cc  parse2.cc
devel/devel.dmacvicar/: BDBBackend.cc  BDBBackend.h  Backend.cc  Backend.h  CMakeLists.txt  CURLM_tp.cc  CacheQuery_test.cc  CacheStore.cc  CacheStore_tp.cc  CachedSource_tp.cc  Makefile  Makefile.am  Makefile.in  PersistentStorage.cc  PersistentStorage.h  README  RepositoryManager.cc  RepositoryManager.h  RepositoryManager_tp.cc  SQLiteBackend.cc  SQLiteBackend.h  SQLiteWrapper.cc  SQLiteWrapper.h  SUSETagsDownloader.cc  SUSETagsDownloader_tp.cc  SUSETagsParser.cc  SUSETagsParser.h  SUSETagsParser_tp.cc  ScanSource.cc  SolvStore_tp.cc  SourceManager.cc  SourceManager.h  TIMING.txt  XMLFilesBackend.cc  XMLFilesBackend.h  YUMDownloader.cc  YUMDownloader.h  YUMDownloader_tp.cc  YUMReader_tp.cc  aj.cc  (+33 more)
devel/devel.etoulas/: helix.xml  helix2yum.rb  test.xml
devel/devel.gfarrasb/: CMakeLists.txt  MediaAccess.cc  MediaAria2c.cc  MediaAria2c.h  MediaException.cc  MediaMetalink.cc  MediaMetalink.h
devel/devel.jkupec/: CMakeLists.txt  YUMParser.cc  YUMParser.h  YUMParser_test.cc  dbqueries.sql  deltarpm.cc  pathinfo.cc  play.cc  poolquery.cc  repos.cc
devel/devel.jsrain/: CMakeLists.txt  Makefile.am  Msg.cc  PatchRead.cc  RpmInstall.cc  RpmTarget.cc  SourceCacheRead.cc  SourceProvide.cc  SourceRead.cc  repodata  repomd.xml
doc/: CMakeLists.txt  Makefile.am  TODO  downloaders-mediaset.txt  libzypp.zargo  locks.5  locks.5.txt  needs-restarting.1.txt  persistency-concept.txt  solverstates.dot  zypp-CheckAccessDeleted.1  zypp-CheckAccessDeleted.1.txt  zypp-NameReqPrv.1  zypp-NameReqPrv.1.txt  zypp-refresh.8  zypp-refresh.8.txt  zypper-log.8  zypper-log.8.txt  zypper-rug  zypper.8  zypper.8.txt
examples/: CMakeLists.txt  COW_debug.cc  Makefile.am  README  read_plaindir_source.cc  whatprovides.cc
po/: .cvsignore  CMakeLists.txt  ChangeLog  LINGUAS  Makefile.in.in  Makevars  POTFILES.in  PotfileDiff.sh  PotfileUpadte.sh  af.po  ar.po  ast.po  be.po  bg.po  bn.po  br.po  bs.po  ca.po  createPot  cs.po  cy.po  da.po  de.po  el.po  el_GR.po  en.po  en_GB.po  en_US.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  gl.po  gu.po  he.po  hi.po  hr.po  (+50 more)
src/: AliveCursor.h  CMakeLists.txt  Command.cc  Command.h  CommitSummary.cc  CommitSummary.h  Config.cc  Config.h  Guardians.h  Makefile.am  PackageArgs.cc  PackageArgs.h  RequestFeedback.cc  SolverRequester.cc  SolverRequester.h  Summary.cc  Summary.h  Table.cc  Table.h  ZCOMMAND.cc  ZCOMMAND.h  Zypper.cc  Zypper.h  bash-completion.sh  checkpatches-keyring-callbacks.h  configtest.cc  configtest.h  download.cc  download.h  global-settings.cc  global-settings.h  info.cc  info.h  install.cc  install.h  installation_sources  issue.cc  issue.h  keys.cc  keys.h  (+83 more)
test/: .cvsignore  CMakeLists.txt  Example.createResolvable.cc  Main.cc  Makefile.am  Msg.cc  Patch.cc  Script.cc  genclass.in
tests/: CMakeLists.txt  Locales_test.cc  PackageArgs_test.cc  README  Search_104_test.cc  SolverRequester_DISABLED_test.cc  SolverRequester_test.cc  ZyppFlags_test.cc  utf8String_sketch
testsuite/: CMakeLists.txt  Makefile.am
tools/: CMakeLists.txt  CalculateReusableBlocks.cc  DiskUsageCounter.cc  DownloadFiles.cc  DumpSelectable.cc  Makefile.am  NameReqPrv.cc  ProvideSignedDirectory.cc  ScanTwHistory  ToolScanRepos.cc  apt-get  aptitude  argparse.h  needs-restarting  notify-message  patch_find_bug.cc  percent-encode.cc  zypp-CheckAccessDeleted.cc  zypp-NameReqPrv.cc  zypp-cpeid.cc  zypp-install.cc  zypp-list.cc  zypp-pubkey.cc  zypp-runpurge.cc  zypper-donload-stats  zypper-fsearch  zypper-help-all  zypper-log  zypper-mark
zypp/: .cvsignore  APIConfig.h  APIConfig.h.in  Application.cc  Application.h  Arch.cc  Arch.h  ArchCompat.cc  ArchCompat.h  Atom.cc  Atom.h  AutoDispose.h  BaseVersion.h  Bit.h  Bitmap.h  ByteArray.h  ByteCount.cc  ByteCount.h  CMakeLists.txt  Callback.h  CapAndItem.h  CapFactory.cc  CapFactory.h  CapFilters.h  CapMatch.cc  CapMatch.h  CapMatchHelper.h  CapSet.cc  CapSet.h  CapSetFwd.h  Capabilities.cc  Capabilities.h  Capability.cc  Capability.h  Changelog.cc  Changelog.h  CheckSum.cc  CheckSum.h  ContentType.h  CountryCode.cc  (+237 more)
zypp-core/: AutoDispose.h  ByteArray.h  ByteCount.cc  ByteCount.h  CMakeLists.txt  CheckSum.cc  CheckSum.h  Date.cc  Date.h  Digest.cc  Digest.h  ExternalProgram.cc  ExternalProgram.h  Globals.h  KVMap  ManagedFile.h  OnMediaLocation  Pathname.cc  Pathname.h  ShutdownLock.cc  ShutdownLock_p.h  TriBool.h  Url.cc  Url.h  kvmap.h  onmedialocation.cc  onmedialocation.h
zypp-curl/: CMakeLists.txt  CurlConfig  ProxyInfo  TransferSettings  curlconfig.cc  curlconfig.h  curlhelper.cc  proxyinfo.cc  proxyinfo.h  transfersettings.cc  transfersettings.h
zypp-media/: CDTools  CMakeLists.txt  FileCheckException  MediaConfig  MediaException  Mount  cdtools.cc  cdtools.h  filecheckexception.cc  filecheckexception.h  mediaconfig.cc  mediaconfig.h  mediaexception.cc  mediaexception.h  mount.cc  mount.h
zypp-proto/: CMakeLists.txt
zypp-tui/: CMakeLists.txt  Table.cc  Table.h  application.cc  application.h  config.cc  config.h
zypp2/: CMakeLists.txt  CommiterIface.h  JustDownloadPackagesCommiter.cc  JustDownloadPackagesCommiter.h  Lazy.cc  Lazy.h  LazzyText.cc  LazzyText.h  Makefile.am  README  RepoInfo.cc  RepoInfo.h  RepoManager.cc  RepoManager.h  RepoStatus.cc  RepoStatus.h  Repository.cc  Repository.h  RepositoryFactory.cc  RepositoryFactory.h  RepositoryInfo.cc  RepositoryInfo.h  RepositoryManager.cc  RepositoryManager.h
(+4992 files in other folders)
